# agentlint

./: .agentkit-last-run.json  .cursorrules  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  action.yml  all-day-build-contract-github-action.md  all-day-build-contract-v0.1.0.md  copilot-instructions.md  progress-log.md  pyproject.toml
.github/workflows/: agentlint-ci.yml
.github/workflows/examples/: agentlint-context-check.yml
scripts/: ci-context-check.sh
src/agentlint/: __init__.py  cli.py  config.py  context_checker.py  context_formatters.py  context_models.py  engine.py  formatters.py  models.py  parser.py  report.py
src/agentlint/checks/: __init__.py  _common.py  config_vandalism.py  dead_code.py  dependency_injection.py  mcp_permissions.py  permission_escalation.py  scope_drift.py  secret_leak.py  test_regression.py  todo_bombs.py
tests/: test_cli.py  test_cli_check_context.py  test_config.py  test_context_checker.py  test_context_formatters.py  test_engine.py  test_formatters.py  test_github_action_yaml.py  test_integration.py  test_output_contracts.py  test_parser.py  test_report.py
tests/checks/: __init__.py  _utils.py  test_config_vandalism.py  test_dead_code.py  test_dependency_injection.py  test_mcp_permissions.py  test_permission_escalation.py  test_scope_drift.py  test_secret_leak.py  test_test_regression.py  test_todo_bombs.py
tests/fake_checks/: __init__.py  error_check.py  info_check.py  warn_check.py
